# mdview

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  release.yml  update-packages.yml
contrib/skills/mdcast-ask/: SKILL.md
contrib/skills/mdcast-viewer/: SKILL.md
mcp-server/: MCP-SERVER.md  mdcast_mcp.py  tsumugi_mcp.py
src/: find.ts  font-size.ts  history-settings-modal.ts  home.ts  html-export.ts  i18n.ts  main.ts  pdf-export.ts  renderer.ts  save.ts  scroll-keeper.ts  status-bar.ts  tag-add-modal.ts  tag-manager.ts  tag-sidebar.ts  theme.ts  titlebar.ts  types.d.ts  update-modal.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: tsumugi-pdf-aarch64-apple-darwin  tsumugi-pdf-x86_64-apple-darwin
src-tauri/binaries/tsumugi-pdf-src/: main.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json  ja.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: cli.rs  commands.rs  history.rs  http_api.rs  i18n.rs  ipc.rs  lib.rs  main.rs  menu.rs  pdf.rs  recent.rs  state.rs  tags.rs  update_checker.rs  watcher.rs
src/editor/: block-export.ts  block-model.ts  block-parser.ts  block-renderer.ts  editor-controller.ts
src/styles/: editor.css  home.css  main.css  markdown.css  tag.css  titlebar.css
