[package]
name = "tsumugi"
version = "0.3.1"
edition = "2021"

[lib]
name = "tsumugi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tsumugi"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
notify = "6"
notify-debouncer-mini = "0.4"
sys-locale = "0.3"
dirs = "5"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
